now the scrollbar is setted correctly

--- a/pr0ject/public/css/creative.css
+++ b/pr0ject/public/css/creative.css
@@ -3,8 +3,6 @@
  * Copyright 2013-2018 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
  */
-
-body,
 html {
   width: 100%;
   height: 100%;
